<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/title_add_trombi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:fontFamily="@font/allan"
        android:text="@string/Title_Add_Organism"
        android:textColor="@color/bleu_cobalt"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/universityName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg"
        android:textColor="@color/bleu_cobalt"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/Hint_Organism_Name"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg"
        android:textColor="@color/bleu_cobalt"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/Hiny_City"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/cp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg"
        android:textColor="@color/bleu_cobalt"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/Hint_Postal_Code"
        android:inputType="phone"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pays"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_bg"
        android:textColor="@color/bleu_cobalt"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/Hint_Country"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        android:autofillHints="" />


    <ImageView
        android:layout_width="198dp"
        android:layout_height="244dp"
        android:src="@drawable/woman2"
        android:layout_gravity="center"
        android:contentDescription="@string/Label_Illustration_2">
    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subUniv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_bouton"
        android:text="@string/Action_Valider"
        android:textStyle="bold"
        />


</LinearLayout>