<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">
            <LinearLayout
                android:id="@+id/uselessParent"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:background="@drawable/background"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profil_user"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="21dp"
                    android:src="@drawable/woman2" />

                <TextView
                    android:id="@+id/title_about_us"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Title_About_Us"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Description_About_Us"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="275dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/souplesse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Attribut_1"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            />
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="25dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@android:drawable/btn_star_big_on"
                            android:contentDescription="@string/Label_Illustration_2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/quick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Attribut_2"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            />
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="25dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@android:drawable/btn_star_big_on"
                            android:contentDescription="@string/Label_Illustration_2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/innov"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/Attribut_3"
                            android:textSize="20sp"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:contentDescription="@string/Label_Illustration_2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@android:drawable/btn_star_big_on" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/title_stars"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:padding="16dp"
                android:textSize="20sp"
                android:text="@string/About_Stars"/>
            <TextView
                android:id="@+id/descriptions_stars"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:padding="16dp"
                android:text="@string/Description_Stars"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:contentDescription="@string/Label_Illustration_2"/>
                <TextView
                    android:id="@+id/user_email"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Yellow_Star"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@android:drawable/btn_star_big_off"
                    android:contentDescription="@string/Label_Illustration_2"/>
                <TextView
                    android:id="@+id/user_phone"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Grey_Star"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/Label_Illustration_2" />
                <TextView
                    android:id="@+id/user_statut"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/No_Star"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/User_Comment"
                    android:src="@drawable/ic_coment"
                    android:contentDescription="@string/User_Comment" />
                <TextView
                    android:id="@+id/user_comment"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/User_Comment"/>
            </LinearLayout>
            <!-- Seconde categorie -->
            <TextView
                android:id="@+id/title_droit"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:padding="16dp"
                android:textSize="20sp"
                android:text="@string/Description_Droit"/>
            <TextView
                android:id="@+id/subtitle_droit"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:padding="16dp"
                android:text="@string/Tuto_Droit"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp" android:layout_gravity="center"
                android:src="@drawable/tuto_intro"
                android:contentDescription="@string/Label_Illustration_8"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/droit1"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Tuto_Droit1"/>
            </LinearLayout>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/tuto_popup"
                android:contentDescription="@string/Label_Illustration_8"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/droit2"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Tuto_Droit2"/>
            </LinearLayout>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/tuto_partager"
                android:contentDescription="@string/Label_Illustration_8"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/droit3"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Tuto_Droit3"/>
            </LinearLayout>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/tuto_gestion_droit"
                android:contentDescription="@string/Label_Illustration_8"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/droit4"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Tuto_Droit4"/>
            </LinearLayout>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/tuto_popup"
                android:contentDescription="@string/Label_Illustration_8"/>
            <LinearLayout
                android:paddingStart="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/droit5"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/Tuto_Droit5"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>